--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     width: 100%;
     font-size: 30px;
     height: 80px;
-    /* padding: 50px; */
+    padding: 50px;
     font-family: 'Black Ops One', cursive;
 }
 .row {
